<resources>
    <string name="app_name">A-CAT</string>
    <string name="contentDescription">cd</string>
    <string name="sample_label">Normal Label</string>
    <string name="sample_label_small">Small Label</string>
    <string name="sample_label_large">Large Label</string>
    <string name="sample_button">SAMPLE BUTTON</string>
    <string name="sample_button_ok">OKAY</string>
    <string name="sample_button_done">DONE</string>
    <string name="sample_button_save">SAVE</string>
    <string name="sample_button_cancel">CANCEL</string>
    <string name="sample_button_yes">YES</string>
    <string name="sample_button_no">NO</string>
    <string name="sample_button_continue">CONTINUE</string>
    <string name="sample_input_hint">Input Hint</string>
    <string name="profile_input_hint">Unavailable</string>
    <string name="error_no_internet_connectivity" translatable="false">No Internet connection found</string>
    <string name="error_connectivity_error" translatable="false">There was a problem attempting to establish a connection. Please try again.</string>
    <string name="login_username_input_hint" translatable="false">username</string>
    <string name="login_password_input_hint">password</string>
    <string name="login_forgot_password_label">Forgot password? Tap here</string>
    <string name="login_button">SIGN IN</string>
    <string name="login_error_username_prompt">Please enter in username</string>
    <string name="login_error_password_prompt">Please enter in password</string>
    <string name="login_progress_message">Signing in&#8230;</string>
    <string name="login_success_message">Logged in.</string>
    <string name="login_logout_message">Logged out.</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_invalid_username_password">Invalid username or password</string>
    <string name="login_error_generic">There was a problem during login. Please try again.</string>
    <string-array name="main_fragment_titles">
        <item>@string/clients_fragment_title</item>
        <item>@string/screenings_fragment_title</item>
        <item>@string/loan_applications_fragment_title</item>
        <item>@string/acat_fragment_title</item>
    </string-array>
    <string name="main_fragment_progress_message_label">Downloading data&#8230;</string>
    <string name="main_fragment_progress_message_data_label" formatted="false">Downloading data (%d%%) &#8230;</string>
    <string name="main_fragment_show_download_complete_message">Download complete.</string>
    <string name="clients_fragment_title">Clients</string>
    <string name="clients_fragment_no_clients_label">No clients found.\nTap the + button to register a new Client.</string>
    <string name="clients_fragment_no_groups_label">No groups found.\nTap the + button to register a new Group.</string>
    <string name="clients_fragment_status_new">New</string>
    <string name="clients_fragment_status_screening_in_progress">Screening - In Progress</string>
    <string name="clients_fragment_status_eligible">Eligible</string>
    <string name="clients_fragment_status_ineligible">Ineligible</string>
    <string name="clients_fragment_status_loan_application_new">Loan Application - New</string>
    <string name="clients_fragment_status_loan_application_in_progress">Loan Application - In Progress</string>
    <string name="clients_fragment_status_loan_application_accepted">Loan Application - Accepted</string>
    <string name="clients_fragment_status_loan_application_declined">Loan Application - Declined</string>
    <string name="clients_fragment_status_acat_new">A-CAT - New</string>
    <string name="clients_fragment_status_acat_in_progress">ACAT - In Progress</string>
    <string name="clients_fragment_status_acat_submitted">ACAT - Submitted</string>
    <string name="clients_fragment_status_acat_resubmitted">ACAT - Resubmitted</string>
    <string name="clients_fragment_status_acat_authorized">ACAT - Authorized</string>
    <string name="clients_fragment_status_acat_declined_for_review">ACAT - Declined for Review</string>
    <string name="clients_fragment_status_loan_granted">Loan - Granted</string>
    <string name="clients_fragment_status_loan_paid">Loan - Paid</string>
    <string name="clients_fragment_status_loan_appraise_in_progress">Appraisal - In Progress</string>
    <string name="clients_fragment_status_loan_payment_in_progress">Payment - In Progress</string>
    <string name="clients_fragment_status_unknown">Unknown Client Status</string>
    <string name="group_creation_success_message">Group created successfully.</string>
    <string name="clients_filter_menu_label_all">All</string>
    <string name="client_filter_menu_label_new">New</string>
    <string name="client_filter_menu_label_screening">Screening</string>
    <string name="client_filter_menu_label_loan_application">Loan Application</string>
    <string name="client_filter_menu_label_acat">A-CAT</string>
    <string name="client_filter_menu_label_granted">Granted</string>
    <string name="client_filter_menu_label_paid">Paid</string>
    <string name="screenings_fragment_title">Screenings</string>
    <string name="screenings_fragment_no_screenings_label">No Individual screenings found.</string>
    <string name="screenings_fragment_no_group_screenings_label">No Grouped screenings found.</string>
    <string name="screenings_fragment_status_new">New</string>
    <string name="screenings_fragment_status_in_progress">In Progress</string>
    <string name="screenings_fragment_status_submitted">Submitted</string>
    <string name="screenings_fragment_status_approved">Approved</string>
    <string name="screening_filter_menu_label_all">All</string>
    <string name="screening_filter_menu_label_new">@string/screenings_fragment_status_new</string>
    <string name="screening_filter_menu_label_in_progress">@string/screenings_fragment_status_in_progress</string>
    <string name="screening_filter_menu_label_submitted">@string/screenings_fragment_status_submitted</string>
    <string name="screening_filter_menu_label_eligible">@string/screenings_fragment_status_approved</string>
    <string name="screening_filter_menu_label_rejected">@string/screenings_fragment_status_declined_final</string>
    <string name="loan_filter_menu_label_all">@string/screening_filter_menu_label_all</string>
    <string name="loan_filter_menu_label_new">@string/screening_filter_menu_label_new</string>
    <string name="loan_filter_menu_label_in_progress">@string/screening_filter_menu_label_in_progress</string>
    <string name="loan_filter_menu_label_submitted">@string/screening_filter_menu_label_submitted</string>
    <string name="loan_filter_menu_label_approved">Accepted</string>
    <string name="loan_filter_menu_label_declined">Declined</string>
    <string name="acat_filter_menu_label_all">All</string>
    <string name="acat_filter_menu_label_new">New</string>
    <string name="acat_filter_menu_label_in_progress">In - Progress</string>
    <string name="acat_filter_menu_label_submitted">Submitted</string>
    <string name="acat_filter_menu_label_resubmitted">Resubmitted</string>
    <string name="acat_filter_menu_label_approved">Authorized</string>
    <string name="acat_filter_menu_label_declined">Declined</string>
    <string name="question_sample_title">Question Title</string>
    <string name="question_sample_message">Are you sure you want to do this?</string>
    <string name="message_sample_title">Process Complete</string>
    <string name="message_sample_message_label">The process has successfully completed without any errors.</string>
    <string name="record_loan_dialog_title">Record Approved Loan</string>
    <string name="record_loan_approved_loan_amount_label">Enter the approved loan amount</string>
    <string name="record_loan_input_hint">Loan Amount</string>
    <string name="record_loan_cancel_button_label">Cancel</string>
    <string name="record_loan_ok_button_label">OK</string>
    <string name="group_dialog_title">Create Group</string>
    <string name="group_code_input_hint">Group Name</string>
    <string name="group_member_count_input_hint">Number of Members</string>
    <string name="group_loan_amount_input_hint">Total Loan Amount</string>
    <string name="group_ok_button_label">OK</string>
    <string name="group_cancel_button_label">Cancel</string>
    <string name="date_selector_add_title">Add Date</string>
    <string name="date_selector_day_input_hint">Day</string>
    <string name="date_selector_month_input_hint">Month</string>
    <string name="date_selector_year_input_hint">Enter Year</string>
    <string name="date_selector_auto_fill_age_label">Auto-fill by age</string>
    <string name="date_selector_auto_fill_age_input_hint">Enter in age</string>
    <string name="add_group_member_title">Select Member Type:</string>
    <string name="add_group_member_new_member_label">New Member</string>
    <string name="add_group_member_existing_member_label">Existing Member</string>
    <string name="add_group_member_ok_button">OK</string>
    <string name="add_group_member_cancel_button">Cancel</string>
    <string name="acat_dialog_ok_button">OK</string>
    <string name="add_other_acat_item_label">Other</string>
    <string name="other_dialog_additional_field_hint">additional field</string>
    <string name="other_dialog_unit_of_measurement_input">unit of measurement</string>
    <string name="group_filter_menu_label_all">@string/clients_filter_menu_label_all</string>
    <string name="group_filter_menu_label_new">@string/client_filter_menu_label_new</string>
    <string name="group_filter_menu_label_screening">@string/client_filter_menu_label_screening</string>
    <string name="group_filter_menu_label_loan_application">@string/client_filter_menu_label_loan_application</string>
    <string name="group_filter_menu_label_acat">@string/client_filter_menu_label_acat</string>
    <string name="group_screening_filter_menu_label_all">@string/screening_filter_menu_label_all</string>
    <string name="group_screening_filter_menu_label_new">@string/screening_filter_menu_label_new</string>
    <string name="group_screening_filter_menu_label_in_progress">@string/screening_filter_menu_label_in_progress</string>
    <string name="group_screening_filter_menu_label_submitted">@string/screening_filter_menu_label_submitted</string>
    <string name="group_screening_filter_menu_label_eligible">@string/screening_filter_menu_label_eligible</string>
    <string name="group_screening_filter_menu_label_rejected">@string/screening_filter_menu_label_rejected</string>
    <string name="group_loan_filter_menu_label_all">@string/loan_filter_menu_label_all</string>
    <string name="group_loan_filter_menu_label_new">@string/loan_filter_menu_label_new</string>
    <string name="group_loan_filter_menu_label_in_progress">@string/loan_filter_menu_label_in_progress</string>
    <string name="group_loan_filter_menu_label_submitted">@string/loan_filter_menu_label_submitted</string>
    <string name="group_loan_filter_menu_label_approved">@string/loan_filter_menu_label_approved</string>
    <string name="group_loan_filter_menu_label_declined">@string/loan_filter_menu_label_declined</string>
    <string name="group_acat_filter_menu_label_all">@string/acat_filter_menu_label_all</string>
    <string name="group_acat_filter_menu_label_new">@string/acat_filter_menu_label_new</string>
    <string name="group_acat_filter_menu_label_in_progress">@string/acat_filter_menu_label_in_progress</string>
    <string name="group_acat_filter_menu_label_submitted">@string/acat_filter_menu_label_submitted</string>
    <string name="group_acat_filter_menu_label_resubmitted">@string/acat_filter_menu_label_resubmitted</string>
    <string name="group_acat_filter_menu_label_approved">@string/acat_filter_menu_label_approved</string>
    <string name="group_acat_filter_menu_label_declined">@string/acat_filter_menu_label_declined</string>
</resources>