<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.dialogs.otheritem.OtherDialog">

    <TextView
        android:id="@+id/otherDialogTitleLabel"
        style="@style/label.large"
        android:text="@string/add_other_acat_item_label"
        android:padding="32dp"/>

    <EditText
        android:id="@+id/otherDialogACATItemInput"
        style="@style/input"
        android:hint="@string/other_dialog_additional_field_hint"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/otherDialogACATItemUnitInput"
        style="@style/input"
        android:hint="@string/other_dialog_unit_of_measurement_input"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/otherDialogCancelButton"
            style="@style/button.dark.gray.dialog"
            android:layout_weight="1"
            android:text="@string/sample_button_cancel" />

        <Button
            android:id="@+id/otherDialogOKButton"
            style="@style/button.dark.green.dialog"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/acat_dialog_ok_button" />
    </LinearLayout>
</LinearLayout>